--- a/src/app/Wave.css
+++ b/src/app/Wave.css
@@ -1,46 +1,43 @@
-/* Стили умумӣ */
-.wave-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
 
-.svg {
+
+
+/* .svg {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 #wave1, #wave2, #wave3 {
-  transform-origin: center; /* Барои аниматсияи гардиш */
-  transform: scale(1); /* Маълумот дар назар дошта шудааст */
+  transform-origin: center; 
+  transform: scale(1); 
 }
 
-/* Ба экранҳои хурд як эффекти мавҷ ё аниматсияи дурусти мобилӣ илова кунед */
+
 @media (max-width: 600px) {
   .svg {
-    height: 200px; /* Баландии SVG-ро барои экранҳои хурд танзим кунед */
+    height: 200px; 
   }
 
   #wave1, #wave2, #wave3 {
-    opacity: 0.7; /* Мавҷҳоро барои экранҳои хурд каме шифо диҳед */
-    transform: scale(0.9); /* Мавҷҳоро хурдтар кунед */
+    opacity: 0.7; 
+    transform: scale(0.9); 
   }
 }
 
-/* Барои экранҳои хурд (масалан, 360px) */
+
 @media (max-width: 360px) {
   .wave-container {
-    height: 200px; /* Баландии камтар барои экранҳои хурд */
+    height: 200px; 
   }
 
   .svg {
-    height: 200px; /* Баландии SVG-ро барои экранҳои хурд танзим кунед */
+    height: 200px; 
   }
 
   #wave1, #wave2, #wave3 {
-    transform: scale(0.8); /* Мавҷҳоро хурдтар кунед */
+    transform: scale(0.8); 
   }
 }
+
+
