--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,45 @@
 *{
     font-family: Roboto;
 }
+
+.rig:hover .ov {
+    animation: cursor 0.5s ease forwards, anti-cursor 2s ease-out infinite;
+  }
+  
+  /* Animation for cursor movement */
+  @keyframes cursor {
+    0% {
+      transform: translate(0, 0);
+    }
+    25% {
+      transform: translate(10px, 20px);
+    }
+    50% {
+      transform: translate(20px, 10px);
+    }
+    75% {
+      transform: translate(10px, -10px);
+    }
+    100% {
+      transform: translate(0, 0);
+    }
+  }
+  
+  /* Opposite (anti-cursor) movement */
+  @keyframes anti-cursor {
+    0% {
+      transform: translate(0, 0);
+    }
+    25% {
+      transform: translate(-10px, -20px);
+    }
+    50% {
+      transform: translate(-20px, -10px);
+    }
+    75% {
+      transform: translate(-10px, 10px);
+    }
+    100% {
+      transform: translate(0, 0);
+    }
+  }
